# TrafficMonitor

./: CMakeLists.txt  LICENSE  README.md  readme.md
config/: camera_2.yml  intrinsics.yml  pointssets.yml
include/mul_t/: config_panel.hpp  main_window.hpp  my_label.hpp  object_detection.hpp  qnode.hpp  tools.hpp  traffic_detail.hpp
scripts/: catimage.py
src/: config_panel.cpp  main.cpp  main_window.cpp  my_label.cpp  object_detection.cpp  qnode.cpp  traffic_detail.cpp
ui/: config_panel.ui  main_window.ui  traffic_detail.ui
